Bug 241939. Do something reasonable with blending in 8-bit devices. r+sr=blizzard